[package]
name = "dyn_partial_eq_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["dynamic", "derive"]
description = "This crate enables you to derive PertialEq for types that hold dyn objects by using the  DynPartialEq from the associated crate dyn_partial_eq"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = "2.0.18"
