[package]
name = "dyn_partial_eq_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dynamic", "derive"]
description = "Derives for PartialEq on structs and enums with trait objects"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = "2.0.18"
dyn_partial_eq = {path = "../"}

[dev-dependencies]
trybuild = "1.0.80"